css/app.css
.videoWrapper {
	position: relative;
	padding-bottom: 56.25%; /* 16:9 */
	padding-top: 25px;
	height: 0;
}
.videoWrapper iframe {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
}
.sticky {
    position: fixed !important;
    top: 0;
    z-index: 10000;
}
.menu-active {
    color: #DB6837 !important;
}
.menu-inactive {
    color: #000 !important;
    opacity: 0.3;
}
.blog-nav a {
    font-size: 16px;
    font-weight: 400;
    text-shadow: 2px 2px 0 rgba(0,0,0,.15);
}
.lb-image {
    max-width:inherit;  /* Allow lightbox images to expand when clicked on */
}
body {
    background: white;  
}
img {
    max-width:100%;
    height:auto;
    -ms-interpolation-mode:bicubic;
    display:inline-block;
}
p {
    font-family: Palatino, "freight-text-pro",Georgia,Cambria,"Times New Roman",Times,serif;
    line-height: 1.8em;
    padding-top: 0.6em;
    padding-bottom: 0.6em;
    font-size: 16px;
    letter-spacing: 0.01rem;
    font-weight: 400;
    font-style: normal;
}
a:hover {
  color: #59ffeb;
  opacity: 1.0 !important;
}
h1 {
    font-family:helvetica;
    font-size:27px;
    font-weight:500;
    color: #ffffff;
}
h1-alt {
    font-family:helvetica;
    font-size:40px;
    font-weight:500;
}
h2 {
    text-transform:none;
}
h2-dark {
    font-family: 'Roboto Slab', serif;
    font-size:27px;
    font-weight:500;
    line-height: 30px;
    color: #585858;
    text-shadow: none;
}
h3 {
    text-transform:none;
}
h3-dark {
    font-family: 'Roboto Slab', serif;
    font-size:20px;
    font-weight:500;
    line-height: 30px;
    color: #585858;
    text-shadow: none;
}
h4 {
    text-transform:none;
}
h4-dark {
    font-size:17px;
    color: #585858;
    text-shadow: none;
}
h5-dark {
    font-family: sans-serif;
    font-size:15px;
    color: #585858;
    text-shadow: none;
}
ul {
    font-family: "freight-text-pro",Georgia,Cambria,"Times New Roman",Times,serif;
    line-height: 1.8em;
}
nav ul {
    font-family: inherit;
    line-height: inherit;
}
#blog-nav ul {
    line-height: 1.8em;
}
.text-shadowed {
    text-shadow: 3px 3px 3px #141414;    
}
.text-upper {
    text-transform:uppercase;
}
.text-lower {
    text-transform:lowercase;
}
.text-centered  {
    text-align:center;
}
.text-left  {
    text-align:left;
}
.text-right  {
    text-align:right;
}
.text-justified  {
    text-align:justify;
}
.cover {
    background-size:cover;
/*    background-attachment:fixed;*/
/*    background-position: 0 -80px;*/
    box-shadow: 0px -4px 4px -2px #141414 inset;
}
.mountainside {
    background-image:url('../img/covers/cover-mountainside.png');    
}
.waterfall {
    background-image:url('../img/covers/cover-waterfall.png');    
}
.bluesky {
    background-image:url('../img/covers/cover-bluesky.png');
}
.rock {
    background-image:url('../img/covers/cover-rock.png');    
}
.liteturn {
    background-image:url('../img/covers/cover-liteturn.png');
}
.about-avatar {
	position: relative;
	margin-top: -140px;
	border: 4px solid #ffffff;
	width: 180px;
	height: 180px;
	-webkit-border-radius: 50%;
	border-radius: 50%;
}
.top-aligned {
    vertical-align:top;
}
.hcentered {
    margin-left:auto;
    margin-right:auto;
}
.wide {
    width:80%;
    left:10%;
}
.orbit-container {
    width:65%;
    float:left;
}
.image-box {
    box-shadow: -2px 2px 3px #111111;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}
.image-box:hover {
    opacity:0.6;
}
.slight-gray-bg {
    background: #EEEEEE;
}
#intro {
    text-align: center;
    background: #141414;
    padding: 40px;
}
#code {
    text-align: center;
    padding: 40px;
    background: #EEEEEE;
}
#blog {
    padding: 20px;
}
#hello-slider {
    padding-left:15px;
    padding-top:3px;
    float:left;
}
#icons {
    margin-top:3px;
    padding:20px 0 0 40px;
    background:url('../images/black-bg.png') repeat-x;
}
#footer {
  margin-left:15px;
  width:96%;
}

/* Social Media icons */
i.inline {
	margin-left: 5px;
	margin-right: 5px;
}

.icon,
a .icon {
    font-size: 14px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    width: 40px;
    height: 40px;
    line-height: 40px;
    color: #ffffff;
    background: #1a1a1a;
    margin: auto 3px;
    -webkit-border-radius: 50%;
    border-radius: 50%;
}

a .icon:hover {
    text-decoration: none;
    color: #ffffff;
    background: #bba454;
}

.icon.small {
    font-size: 12px;
    width: 25px;
    height: 25px;
    line-height: 25px;
}

.icon.medium {
    font-size: 14px;
    width: 30px;
    height: 30px;
    line-height: 30px;
}

.icon.big {
    font-size: 20px;
    width: 50px;
    height: 50px;
    line-height: 50px;
}

.icon.white {
    color: #1a1a1a;
    background: #ffffff;
}

/* Fixing lineheights */
.icon.outline {
    line-height: 36px;
}

.icon.small.outline {
    line-height: 21px;
}

.icon.medium.outline {
    line-height: 26px;
}

.icon.big.outline {
    line-height: 46px;
}

/* Lightbox CSS */ 

/* line 180, ../sass/screen.sass */
.image-row {
  *zoom: 1;
  margin-bottom: 0px;
}

/* line 38, ../../../../.rvm/gems/ruby-1.9.3-p392/gems/compass-0.12.2/frameworks/compass/stylesheets/compass/utilities/general/_clearfix.scss */
.image-row:after {
  content: "";
  display: table;
  clear: both;
}

.image-link {
  float:left;
  display: inline-block;
  margin: 0 10px 20px 10px;
  line-height: 0;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  -ms-border-radius: 4px;
  -o-border-radius: 4px;
  border-radius: 4px;
  border: 4px solid #5e5e5e;
  -webkit-transition: all 0.1s ease-out;
  -moz-transition: all 0.1s ease-out;
  -o-transition: all 0.1s ease-out;
  transition: all 0.1s ease-out;
}
.image-link:hover {
  border: 4px solid #00bfa8;
}

@media only screen and (max-device-width: 720px) {
    #posts {
        visibility: hidden !important;
    }
    #icons {
	padding-left:20px;
    }
    #code-welcome {
	display:none;
    }
    #design-welcome {
	display:none;
    }
    #hello-welcome {
        margin-left:auto;
	margin-right:auto;
	width:100%;
    }
    .image-box:hover {
	opacity:1;
    }
}

